# ROS_Object_Manipulation

./: README.md
ROBOTIS-MANIPULATOR-H/manipulator_h_description/meshes/: f200_optical_link.STL
ROBOTIS-MANIPULATOR-H/manipulator_h_description/urdf/: manipulator_h_gripper.xacro  manipulator_h_gripper_camera.xacro
ROBOTIS-MANIPULATOR-H/manipulator_h_gazebo/config/: position_controller_gripper.yaml
ROBOTIS-MANIPULATOR-H/manipulator_h_gazebo/launch/: manipulator_h_gripper_camera.launch  position_controller_gripper.launch  robots.launch
ROBOTIS-MANIPULATOR-H/manipulator_h_gazebo/worlds/: box_grid.world  boxes.world
ROBOTIS-MANIPULATOR-H/manipulator_h_manager/launch/: manipulator_h_manager.launch
ROBOTIS-MANIPULATOR-H_B/manipulator_h_gazebo/launch/: manipulator_h_gazebo_alex.launch  manipulator_h_gripper.launch  position_controller.launch
ROBOTIS-MANIPULATOR-H_B/manipulator_h_gazebo/worlds/: black_m_boxes1.world  black_m_boxes2.world  grid_box.dae
ROBOTIS-MANIPULATOR-H_B/manipulator_h_gui/src/: main_window.cpp
ROBOTIS-MANIPULATOR-H_B/manipulator_h_manager/launch/: manipulator_h_manager_gazebo.launch
mov_boxes/: CMakeLists.txt  README.md
mov_boxes/src/: qnode.cpp
mov_boxes_B/: package.xml
mov_boxes_B/include/: mov_box_node.h  qnode.hpp
mov_boxes_B/src/: mov_box_node.cpp
